feat(upgradechat): add Upgrade.chat API piece def and auth

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -607,6 +607,9 @@
       "@activepieces/piece-typeform": [
         "packages/pieces/community/typeform/src/index.ts"
       ],
+      "@activepieces/piece-upgradechat": [
+        "packages/pieces/community/upgradechat/src/index.ts"
+      ],
       "@activepieces/piece-vbout": [
         "packages/pieces/community/vbout/src/index.ts"
       ],
